# OpticalCortex

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: build.yml
src/: index.html  login.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  facebook-login.json  instagram-login.json  youtube-login.json
src-tauri/icons/: icon.icns
src-tauri/src/: downloader.rs  lib.rs  main.rs
