[package]
name = "OpticalCortex"
version = "0.1.0"
description = "Desktop video downloader and media converter"
authors = []
edition = "2021"

[lib]
name = "video_dl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["devtools", "wry"] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio          = { version = "1", features = ["full"] }
uuid           = { version = "1", features = ["v4"] }
url            = "2"

# Windows: WebView2 CDP cookie extraction
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows       = { version = "0.61", features = ["Win32_Foundation"] }

# macOS: WKHTTPCookieStore cookie extraction
[target.'cfg(target_os = "macos")'.dependencies]
objc2            = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSDate", "NSHTTPCookie", "NSString"] }
objc2-web-kit    = { version = "0.3", features = ["WKHTTPCookieStore", "WKWebsiteDataStore", "WKWebViewConfiguration", "WKWebView"] }
block2           = "0.6"

# Linux: WebKitGTK CookieManager cookie extraction
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2", features = ["v2_40"] }
soup3      = "0.5"
gio        = "0.18"
